// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertTotals should correctly convert attributes in first dim and measure group in second dim 1`] = `
Array [
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals should correctly convert measure group and attribute in one dimension 1`] = `
Array [
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_1",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": Array [
          "measureGroup",
          "localAttr2",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals should correctly convert multiple totals with various functions 1`] = `
Array [
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "measureGroup",
        ],
      },
    ],
  },
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m2_by_localAttr1_0",
    "metric": "m2",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "measureGroup",
        ],
      },
    ],
  },
  Object {
    "function": "MIN",
    "localIdentifier": "total_min_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "measureGroup",
        ],
      },
    ],
  },
  Object {
    "function": "MAX",
    "localIdentifier": "total_max_m2_by_localAttr1_0",
    "metric": "m2",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals should correctly convert no totals 1`] = `Array []`;

exports[`convertTotals should correctly convert subtotal 1`] = `
Array [
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr2_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "localAttr3",
          "measureGroup",
        ],
      },
      Object {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": Array [
          "localAttr1",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals should correctly convert three dimensions 1`] = `
Array [
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "measureGroup",
        ],
      },
      Object {
        "dimensionIdentifier": "dim_2",
        "totalDimensionItems": Array [
          "localAttr2",
        ],
      },
    ],
  },
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr2_2",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": Array [
          "localAttr1",
        ],
      },
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals should correctly convert three totals with the same function 1`] = `
Array [
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m2_by_localAttr1_0",
    "metric": "m2",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m3_by_localAttr1_0",
    "metric": "m3",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals should correctly convert total on dimension with measure group 1`] = `
Array [
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "localAttr3",
        ],
      },
      Object {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": Array [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals should correctly convert total on single dimension result spec 1`] = `
Array [
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": Array [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals should correctly convert total without any measure group 1`] = `
Array [
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "localAttr3",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals should correctly convert two totals with different functions 1`] = `
Array [
  Object {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
  Object {
    "function": "MIN",
    "localIdentifier": "total_min_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": Array [
      Object {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": Array [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals should fail on converting native total 1`] = `"Tiger backend does not support native totals."`;
